src/objects/User/fields/II_VI_Region__c.field-meta.xml
<CustomField>
    <fullName>II_VI_Region__c</fullName>
    <label>II-VI Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Level_Region</valueSetName>
    </valueSet>
</CustomField>