src/objects/User/fields/RSH__c.field-meta.xml
<CustomField>
    <fullName>RSH__c</fullName>
    <label>RSH</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>II_VI_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>John Ryan</fullName>
            </value>
            <value>
                <fullName>Greg Hart</fullName>
            </value>
            <value>
                <fullName>Frank Fu</fullName>
            </value>
            <value>
                <fullName>Giorgio Ghislotti</fullName>
            </value>
            <value>
                <fullName>Yasuhiro Sakakibara</fullName>
            </value>
            <value>
                <fullName>YoungTae Lee</fullName>
            </value>
            <value>
                <fullName>Christopher Leow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>