src/objects/User/fields/Sub_region_1__c.field-meta.xml
<CustomField>
    <fullName>Sub_region_1__c</fullName>
    <label>Sub-region 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RSH__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Americas-Industrial</fullName>
            </value>
            <value>
                <fullName>Americas-Communications</fullName>
            </value>
            <value>
                <fullName>Gr. China-Telecom OEM</fullName>
            </value>
            <value>
                <fullName>Gr. China-Telecom-ICP/Carrier</fullName>
            </value>
            <value>
                <fullName>Gr. China-Advance Optics</fullName>
            </value>
            <value>
                <fullName>Gr. China-Industry</fullName>
            </value>
            <value>
                <fullName>Japan-Industrial</fullName>
            </value>
            <value>
                <fullName>Japan-Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>