src/objects/User/fields/Sub_region_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_region_2__c</fullName>
    <label>Sub-region 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_region_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tom Neff</fullName>
            </value>
            <value>
                <fullName>Johnny Zhong/Mark Robinson</fullName>
            </value>
            <value>
                <fullName>Chris Ding</fullName>
            </value>
            <value>
                <fullName>Derek Lou</fullName>
            </value>
            <value>
                <fullName>Allan Wei</fullName>
            </value>
            <value>
                <fullName>Paul Deng</fullName>
            </value>
            <value>
                <fullName>Hiroshi Miyata</fullName>
            </value>
            <value>
                <fullName>Masahiko Someya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>