src/objects/User/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <description>Lookup field to User to Point SVP for user role VP</description>
    <label>SVP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>EVP</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <relationshipName>SVP</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>