src/objects/User/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <description>Lookup field to User to point to VP for User role RSM</description>
    <label>VP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>VP</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <relationshipName>VP</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>